# gogoo-panel-people

./: .anjuta_sym_db.db  CMakeLists.txt  Makefile.in  aclocal.m4  configure
.anjuta/session/: anjuta.session  dock-layout.xml
data/: CMakeLists.txt  Makefile.in  gogoo-panel-people.desktop.in  org.freedesktop.Telepathy.Client.MeegoPanelPeople.service.in
data/theme/: CMakeLists.txt  Makefile.in
po/: CMakeLists.txt
src/: CMakeLists.txt  Makefile.in  meego-panel-people.c  mnb-people-panel.c
