SET(THEME_SRCS
	panel.css 
	avatar-bg.png 
	avatar_icon.png 
	avatar_frame.png 
	grey-backdrop.png 
	people-search-bg.png 
	scroll-view-bin-bg.png 
	selected-highlight.png 
	selection-border.png 
	selection-empty.png 
	selection-full.png 
	tile-bg-hover.png 
	active-conversations-header.png 
	active-content-table-bg.png 
	unread-message-bubble-bg.png 
	box-background.png 
	frame-header-background.png 
	frame-background.png 
	panel-background.png 
	content-panel-background.png 
	content-panel-header-grey.png 
	box-background-border-bottom.png 
	background-gradient.png 
	people.png
    )

INSTALL(FILES ${THEME_SRCS} DESTINATION ${PKG_DATADIR}/gogoo-panel-people/theme)



